lesson08/errors.txt
Blackjack.java:209: error: incompatible types: BJ_Dealer cannot be converted to BJ_Player
			this.additionalCards(this.dealer, scnr);
			                         ^
Blackjack.java:220: error: cannot find symbol
					if(player.total() > this.dealer.total){
					                               ^
  symbol:   variable total
  location: variable dealer of type BJ_Dealer
Blackjack.java:223: error: cannot find symbol
					else if(player.total() < this.dealer.total){
					                                    ^
  symbol:   variable total
  location: variable dealer of type BJ_Dealer
Blackjack.java:234: error: cannot find symbol
			player.clear();
			      ^
  symbol:   method clear()
  location: variable player of type BJ_Player
Blackjack.java:236: error: cannot find symbol
		this.dealer.clear();
		           ^
  symbol:   method clear()
  location: variable dealer of type BJ_Dealer
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
5 errors
